--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,11 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.4"
     kapt "androidx.room:room-compiler:2.2.4"
 
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
+    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
+
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 }
